Refactor DBService and SolverController to remove @Autowired annotations and use constructor injection